test/conformance/chainsaw/verifyImages/clusterpolicy/standard/with-mutation/mut-cpol.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: with-mutation-mut
spec:
  background: false
  failurePolicy: Fail
  rules:
    - match:
        any:
          - resources:
              kinds:
                - Pod
      name: with-mutation-rule
      mutate:
        patchStrategicMerge:
          spec:
            containers:
              - (name): test-secret
                image: "ghcr.io/kyverno/test-verify-image:signed"
  validationFailureAction: Enforce
  webhookTimeoutSeconds: 30
