test/conformance/chainsaw/verifyImages/clusterpolicy/standard/with-mutation/img-cpol-assert.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: with-mutation-img
status:
  conditions:
    - reason: Succeeded
      status: "True"
      type: Ready
