test/conformance/chainsaw/verifyImages/clusterpolicy/standard/with-mutation/test-pod-assert.yaml
apiVersion: v1
kind: Pod
metadata:
  name: test-with-mutation
  namespace: test-verify-images
